--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -59,7 +59,8 @@
 
     <div class="servicio">
       <h3>Profesional</h3>
-      <p>Sitio completo como CNPS o Supermercado El Once. Más diseño, más contenido, más estructura.</p>
+      <p>Hasta 6 secciones. Ideal para mostrar más contenido, estructura personalizada, más diseño, 
+        secciones como galería, contacto, nosotros, destacados, y posibilidad de agregar novedades o blog.</p>
       <span class="precio">8.900 UYU</span>
     </div>
 
@@ -69,10 +70,18 @@
       <span class="precio">12.900 UYU</span>
     </div>
   </div>
+  <section class="pdf-section">
+  <h2>📄 Presentación de Servicios</h2>
+  <p>Podés ver nuestra propuesta completa de servicios digitales en el siguiente PDF:</p>
+  <div class="pdf-actions">
+    <a href="../assets/servicios-vantec.pdf" target="_blank" class="btn-pdf">🔍 Ver PDF</a>
 
-  <p class="nota-hosting"><a href="https://wa.me/59894640648?text=Hola%20VanTec,%20vi%20tu%20web%20y%20me%20interesan%20los%20servicios" 
-   class="btn-contacto" target="_blank">
-   Consultar por WhatsApp</a>* Precios no incluyen dominio y hosting (USD 59/año). Mantenimiento mensual opcional desde 800 UYU.</p>
+  </div>
+</section>
+
+
+  <p class="nota-hosting">* Precios no incluyen dominio y hosting (USD 59/año).
+     Mantenimiento mensual opcional desde 800 UYU.</p>
   
 </section>
 
